--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -161,6 +161,8 @@
   <x:String x:Key="Text.Diff.NoChange" xml:space="preserve">没有变更或仅有换行符差异</x:String>
   <x:String x:Key="Text.Diff.Prev" xml:space="preserve">上一个差异</x:String>
   <x:String x:Key="Text.Diff.SideBySide" xml:space="preserve">分列对比</x:String>
+  <x:String x:Key="Text.Diff.Submodule.Old" xml:space="preserve">原子模块指向</x:String>
+  <x:String x:Key="Text.Diff.Submodule.New" xml:space="preserve">新子模块指向</x:String>
   <x:String x:Key="Text.Diff.SyntaxHighlight" xml:space="preserve">语法高亮</x:String>
   <x:String x:Key="Text.Diff.UseMerger" xml:space="preserve">使用外部合并工具查看</x:String>
   <x:String x:Key="Text.Diff.VisualLines.Decr" xml:space="preserve">减少可见的行数</x:String>
