--- a/src/Resources/Locales/en_US.axaml
+++ b/src/Resources/Locales/en_US.axaml
@@ -330,7 +330,7 @@
   <x:String x:Key="Text.Push.Remote" xml:space="preserve">Remote :</x:String>
   <x:String x:Key="Text.Push.Title" xml:space="preserve">Push Changes To Remote</x:String>
   <x:String x:Key="Text.Push.To" xml:space="preserve">Remote Branch :</x:String>
-  <x:String x:Key="Text.Push.Tracking" xml:space="preserve">Tracking remote branch（--set-upstream）</x:String>
+  <x:String x:Key="Text.Push.Tracking" xml:space="preserve">Tracking remote branch</x:String>
   <x:String x:Key="Text.Push.WithAllTags" xml:space="preserve">Push all tags</x:String>
   <x:String x:Key="Text.PushTag" xml:space="preserve">Push Tag To Remote</x:String>
   <x:String x:Key="Text.PushTag.PushAllRemotes" xml:space="preserve">Push to all remotes</x:String>
