--- a/src/Views/CommitDetail.axaml
+++ b/src/Views/CommitDetail.axaml
@@ -17,12 +17,15 @@
         <TextBlock Classes="tab_header" Text="{DynamicResource Text.CommitDetail.Info}"/>
       </TabItem.Header>
 
-      <Grid RowDefinitions="Auto,*">
+      <Grid RowDefinitions="Auto,1,*">
         <!-- Base Information -->
         <v:CommitBaseInfo Grid.Row="0" Content="{Binding Commit}"/>
 
+        <!-- Line -->
+        <Rectangle Grid.Row="1" Height=".65" Margin="8" Fill="{DynamicResource Brush.Border2}" VerticalAlignment="Center"/>
+
         <!-- Change List -->
-        <DataGrid Grid.Row="1"
+        <DataGrid Grid.Row="2"
                   Background="Transparent"
                   ItemsSource="{Binding Changes}"
                   SelectionMode="Single"
